fix: 删除overflow:hidden

--- a/src/assets/styles/interstellarTrip.module.less
+++ b/src/assets/styles/interstellarTrip.module.less
@@ -1,6 +1,6 @@
 body {
   touch-action:none;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .interstellar_trip {
